--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-email/tailwind": "^0.0.18",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
