--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.21",
     "@react-email/tailwind": "^0.0.18",
+    "appwrite": "^15.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "moment": "^2.30.1",
